[package]
name = "scstat_rs"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "scstat_rs"
crate-type = ["cdylib"]

[profile.release]
opt-level = 3

[dependencies]
pyo3 = "0.24.0"
rayon = "1.10.0"
numpy = "0.24.0"
indicatif = "0.15.0"
num_cpus = "1.14.0"
